feat: add sales and buy frame code add method in future
